tests/baselines/reference/parserComputedPropertyName6.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName6.ts(1,11): error TS9002: Computed property names are not currently supported.
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName6.ts(1,19): error TS9002: Computed property names are not currently supported.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName6.ts (2 errors) ====
    var v = { [e]: 1, [e + e]: 2 };
              ~~~
!!! error TS9002: Computed property names are not currently supported.
                      ~~~~~~~
!!! error TS9002: Computed property names are not currently supported.